yaml/alta_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: _namespace_name_
   labels:
      name: _namespace_name_
