yaml/alta_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: _deploy_name_
   labels:
      fibercorpDeploy: _fibercorpID_
spec:
   selector:
      matchLabels:
         fibercorpPod: _fibercorpID_
   replicas: _replicas_
   template:
      metadata:
         labels:
            fibercorpPod: _fibercorpID_
      spec:
         containers:
         - name: _container_name_
           image: _image_name_
           resources:
              requests:
                 cpu: _cpu_request_
                 memory: _mem_request_
           _envs_
           _args_
           _ports_
           _volume_mounts_
         _volume_defs_
