yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: service-hello-world
   labels:
      app: service-hello-world
spec:
   type: NodePort
   selector:
      name: _selector_
   ports:
      - nodePort: 31234
        port: 8080
        targetPort: 8080
