yaml/default_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: default-deny-ingress
spec:
   podSelector: {}
   Ingress:
      - from:
        - namespaceSelector:
           matchLabels:
              name: _namespace_name_
